# goffice-primer

./: .gitignore  Makefile.am  README.md  autogen.sh  chart.c  configure.ac  meson.build
